[gd_scene load_steps=11 format=3 uid="uid://cd21npjsi1iei"]

[ext_resource type="Script" uid="uid://cwoyht270is50" path="res://enemies/normal/squash/squash.gd" id="1_m8w76"]
[ext_resource type="Script" uid="uid://cya84ofqpnfxs" path="res://enemies/stats.gd" id="2_64wqx"]
[ext_resource type="Texture2D" uid="uid://ddcbx1i0bdl77" path="res://assets/temp assest/icon.svg" id="3_63ibj"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="4_gqs84"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="5_jsk1k"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="6_f1j4s"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="7_dls5b"]

[sub_resource type="Resource" id="Resource_7roff"]
script = ExtResource("2_64wqx")
max_health = 20
metadata/_custom_type_script = "uid://cya84ofqpnfxs"

[sub_resource type="CircleShape2D" id="CircleShape2D_gqs84"]
radius = 140.69826

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pst0k"]
size = Vector2(62, 52.75)

[node name="squash" type="CharacterBody2D" node_paths=PackedStringArray("player_decector") groups=["enemy"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_m8w76")
stats = SubResource("Resource_7roff")
player_decector = NodePath("RayCast2D")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 562)

[node name="attack" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
shape = SubResource("CircleShape2D_gqs84")
debug_color = Color(1, 0.46666667, 0.29411766, 0.41960785)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.60156256, 0.5)
texture = ExtResource("3_63ibj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.625)
shape = SubResource("RectangleShape2D_pst0k")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 40.0

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_gqs84")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="attacks" type="Node" parent="StateChart"]
script = ExtResource("5_jsk1k")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/attacks"]
script = ExtResource("6_f1j4s")

[node name="to_attack_start" type="Node" parent="StateChart/attacks/idle"]
script = ExtResource("7_dls5b")
to = NodePath("../../attack")
event = &"attack"
delay_in_seconds = "0.0"

[node name="attack" type="Node" parent="StateChart/attacks"]
script = ExtResource("6_f1j4s")

[node name="to_idle" type="Node" parent="StateChart/attacks/attack"]
script = ExtResource("7_dls5b")
to = NodePath("../../idle")
event = &"stop_attack"
delay_in_seconds = "0.3"

[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]
[connection signal="state_entered" from="StateChart/attacks/attack" to="." method="_on_attack_state_entered"]
